# gz-plugin

./: BUILD.bazel  CMakeLists.txt  Changelog.md  MIGRATION.md  MODULE.bazel  Migration.md  MigrationFromCommon.md  README.md  appveyor.yml  bitbucket-pipelines.yml  configure.bat  filemap.txt  package.xml  plugin.bash_completion.sh  tutorials.md.in
.bcr/: metadata.template.json
.github/: CODEOWNERS
.github/PULL_REQUEST_TEMPLATE/: port.md
.github/ci/: packages.apt
.github/workflows/: bazel.yml  ci-bionic.yml  ci.yml  package_xml.yml  periodic-triage.yml  pr-collection-labeler.yml
cmd/: CMakeLists.txt
core/: BUILD.bazel  CMakeLists.txt
core/include/: CMakeLists.txt
core/include/gz/plugin/: EnablePluginFromThis.hh  Factory.hh  Info.hh  Plugin.hh  PluginPtr.hh  SpecializedPlugin.hh  SpecializedPluginPtr.hh  WeakPluginPtr.hh  config.hh.in  utility.hh
core/include/gz/plugin/detail/: Factory.hh  Plugin.hh  PluginPtr.hh  SpecializedPlugin.hh  utility.hh
core/include/ignition/: plugin.hh
core/include/ignition/plugin/: EnablePluginFromThis.hh  Export.hh  Factory.hh  Info.hh  Plugin.hh  PluginInfo.hh  PluginMacros.hh  PluginPtr.hh  PluginUtils.hh  RegisterPlugin.hh  SpecializedPlugin.hh  SpecializedPluginPtr.hh  TemplateHelpers.hh  WeakPluginPtr.hh  config.hh  config.hh.in  utility.hh
core/include/ignition/plugin/detail/: Export.hh  Factory.hh  Plugin.hh  PluginMacros.hh  PluginPtr.hh  SpecializedPlugin.hh  TemplateHelpers.hh  utility.hh
core/src/: EnablePluginFromThis.cc  Factory.cc  Factory_TEST.cc  Info.cc  Info_TEST.cc  Plugin.cc  PluginInfo.cc  PluginUtils.hh  PluginUtils_TEST.cc  TemplateHelpers_TEST.cc  WeakPluginPtr.cc  utility.cc  utility_TEST.cc
core/test/: CMakeLists.txt
doc/: CMakeLists.txt
examples/: CMakeLists.txt  README.md  integrators.cc  robot.cc
examples/plugins/: BoxEnvironment.cc  CMakeLists.txt  CautiousBot.cc  CrashBot.cc  ExponentialODE.cc  ForwardEuler.cc  PolynomialODE.cc  RungeKutta4.cc  integrators.hh  robot.hh
loader/: BUILD.bazel  CMakeLists.txt
loader/conf/: CMakeLists.txt  plugin.bash_completion.sh  plugin.yaml.in
loader/include/gz/plugin/: Loader.hh
loader/include/gz/plugin/detail/: Loader.hh  Registry.hh  StaticRegistry.hh
loader/include/ignition/plugin/: Loader.hh
loader/include/ignition/plugin/detail/: Loader.hh
loader/include/ignition/plugin/loader/: Export.hh
loader/include/ignition/plugin/loader/detail/: Export.hh
loader/src/: CMakeLists.txt  Demangle.hh  Demangle_TEST.cc  Loader.cc  Loader_TEST.cc  gz.cc  gz_TEST.cc  ign.cc  ign_TEST.cc
loader/src/cmd/: CMakeLists.txt  cmdplugin.rb.in  gz.cc  gz.hh  ign.cc  ign.hh  plugin_main.cc
loader/src/detail/: Registry.cc  StaticRegistry.cc
register/: BUILD.bazel  CMakeLists.txt
register/include/gz/plugin/: Register.hh  RegisterMore.hh  RegisterStatic.hh
register/include/gz/plugin/detail/: Common.hh  Register.hh  RegisterStatic.hh
register/include/ignition/plugin/: CMakeLists.txt  Register.hh  RegisterMore.hh  RegisterStatic.hh
register/include/ignition/plugin/detail/: Register.hh  RegisterStatic.hh
src/: PluginUtils_TEST.cc
test/: BUILD.bazel  CMakeLists.txt
test/integration/: CMakeLists.txt  EnablePluginFromThis_TEST.cc  EnableSharedFromThis_TEST.cc  Factory_TEST.cc  WeakPluginPtr.cc  aliases.cc  deprecated_TEST.cc  factory.cc  flags.cc  plugin.cc  plugin_unload.hh  plugin_unload_with_nodelete.cc  plugin_unload_without_nodelete.cc  static_plugins.cc  templated_plugins.cc  utils.hh
test/performance/: CMakeLists.txt  plugin_specialization.cc
test/plugins/: BadPluginAPIVersionNew.cc  BadPluginAPIVersionOld.cc  BadPluginAlign.cc  BadPluginNoInfo.cc  BadPluginSize.cc  CMakeLists.txt  DummyMultiPlugin.hh  DummyPlugins.cc  DummyPlugins.hh  DummyPluginsOtherTranslationUnit.cc  DummyStaticPlugin.cc  FactoryPlugins.cc  FactoryPlugins.hh  GenericExport.hh  InstanceCounter.cc  InstanceCounter.hh  LoadsAnotherPlugin.cc  LoadsAnotherPlugin.hh  TemplatePlugin.hh  TemplatedPlugins.cc  TemplatedPlugins.hh
test/static_assertions/: CMakeLists.txt  plugin_abstract.cc  plugin_bad_const_assignment.cc  plugin_bad_const_construct.cc  plugin_no_args.cc  plugin_no_base_class.cc  plugin_wrong_base_class.cc
tools/: code_check.sh  cpplint.py
tutorials/: 01_intro.md  02_installation.md
